--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://calebcarnett.github.io/Calebs-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
